# least-squares

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  plot.gp  travis.yml
include/: ls.h
least-squares/include/: ls.h  ls.h~  rls.h~
least-squares/src/: ls.cpp  ls.cpp~  rls.cpp~
src/: ls.cpp  rls.cpp
test/: test.cpp
